crates/elenchus-parser/tests/snapshots/errors__premise_missing_colon.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(\"PREMISE modes\\n    EXCLUSIVE\\n        a b\\n        a c\\n\")"
---
Syntax Error at line 1, col 14: expected ':' after the premise name
  | PREMISE modes
  |              ^--- here
