crates/elenchus-parser/tests/snapshots/errors__provide_missing_colon.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(\"PROVIDE k true\\n\")"
---
RESULT: 1 syntax error

PROVIDE  (1 problem)
  syntax  : PROVIDE [<domain>.]<port|atom>: true|false
  example : PROVIDE db_ready: true
    line 1, col 15 - PROVIDE expects ':' then a value: PROVIDE <port>: true|false
      | PROVIDE k true
      |               ^
